cloud/substrate/cloud-deployments/monitoring.yaml
apiVersion: v1
kind: List

items:

#-----------------PROMETHEUS-PERSISTENT-VOLUME-----------------------

- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: prometheus-pv
    #namespace: monitoring
    labels:
      type: local
  spec:
    storageClassName: manual
    capacity:
      storage: 3Gi
    accessModes:
      - ReadWriteOnce
    persistentVolumeReclaimPolicy: Recycle
    hostPath:
      path: "/datas/prometheus"

#------------------PROMETHEUS-PERSISTENT-VOLUME-CLAIM----------------------
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app: prometheus
    name: prometheus-pvc
    namespace: monitoring
  spec:
    storageClassName: manual
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 2Gi
 
#-------------------PROMETHEUS-DEPLOYMENT---------------------------
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    namespace: monitoring
    annotations:
    creationTimestamp: null
    generation: 1
    labels:
      app: prometheus
    name: prometheus
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: prometheus
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: prometheus
      spec:
        securityContext:
            runAsUser: 0
        containers:
          - envFrom:
            image: prom/prometheus
            imagePullPolicy: IfNotPresent
            name: prometheus
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
            volumeMounts:
            - mountPath: /prometheus
              name: root-prometheus
            - mountPath: /etc/prometheus/prometheus.yml
              name: prometheus-config
              subPath: prometheus.yml

        volumes:
          - name: root-prometheus
            persistentVolumeClaim:
              claimName: prometheus-pvc
          - name: prometheus-config
            configMap:
              name: prometheus-config

#-------------------------PROMETHEUS-SERVICE------------------------------

- apiVersion: v1
  kind: Service
  metadata:
    name: prometheus
    namespace: monitoring
  spec:
    type: ClusterIP
    selector:
      app: prometheus
    ports:
      - name: "9090"
        protocol: TCP
        port: 9090
        targetPort: 9090
